# RAGOps

./: Makefile  README.md  pyproject.toml
src/_01_complaints/: _01_preprocessing.py  _02_embeddings.py  _03_topic_classifier.py  _04_topic_discovery.py  _05_evaluation.py  _06_monitoring.py  _07_kpis.py  __init__.py
src/_02_transcripts/: _01_preprocessing.py  _02_embeddings.py  _03_topic_classifier.py  _04_topic_discovery.py  _05_sentiment.py  _06_evaluation.py  _07_monitoring.py  _08_kpis.py  __init__.py
src/_03_documents/: _00_schema.py  _01_ocr.py  _02_layout.py  _03_entity_recognition.py  _04_pii.py  _05_topic_classifier.py  _06_universal_extraction.py  _07_evaluation.py  _07_monitoring.py  _08_kpi.py  __init__.py
src/ragops/: __init__.py
tests/: run_sample_complaint.py  run_sample_document.py  run_sample_transcript.py  test_import.py  test_sample_complaint_pipeline.py  test_sample_document_pipeline.py  test_sample_transcript_pipeline.py
